--- a/app/views/orders/_line_item_form.html.erb
+++ b/app/views/orders/_line_item_form.html.erb
@@ -1,6 +1,16 @@
 <div class="add-object">
-  <div class="row">
-    <div class="col-md-5 col-md-offset-3">
+  <div class="row" style="margin-bottom:15px;">
+    <div class="form-group">
+      <div class="col-md-3">
+      </div>
+      <div class="col-md-5">
+      </div>
+      <div class="col-md-4">
+        <p class="help-block">eg. Studio, 1 BHK, 2BHK, etc. </p>
+      </div>
     </div>
   </div>
+
+  
+  <br/>
 </div>
